fix: align checkboxes and radio buttons

--- a/src/styles/_input.scss
+++ b/src/styles/_input.scss
@@ -41,7 +41,7 @@
     &-radio, &-checkbox {
       flex-direction: row-reverse;
       justify-content: flex-end;
-      align-items: baseline;
+      align-items: center;
       .input__label {
         margin-bottom: 0;
       }
